--- a/style.css
+++ b/style.css
@@ -2,12 +2,19 @@ body {
   background-color: lightblue;
   background-image: linear-gradient(to bottom right, #00127F, #C900F0);
   min-height: 100%;
+
+  margin: 0;
+  padding: 0;
+  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 h1, h3 {
   color: white;
-  align: center;
-  ont-family: 'Russo One';font-size: 22px;
+  font-family: 'Russo One';font-size: 22px;
 }
 
-html, body { min-height: 100vh; }
+
