--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 body {
   background-color: lightblue;
   background-image: linear-gradient(to bottom right, #00127F, #C900F0);
-  min-height: 100%;
-
   margin: 0;
   padding: 0;
-  height: 100vh; 
+  min-height: 100vh; 
   display: flex;
   justify-content: center;
   align-items: center;
