--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to bottom right, #00127F, #C900F0);
+  background: linear-gradient(to bottom left, #00127F, #C900F0);
   margin: 0;
   padding: 0;
   min-height: 100vh; 
