--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   min-height: 100vh; 
   justify-content: center;
+  display: flex;
   align-items: center;
   text-align: center;
 }
@@ -12,6 +13,11 @@ h1, h3 {
   color: white;
   font-family: 'Russo One';
   display: block;
+}
+
+.heading-container {
+    color: white;
+    display: block;
 }
 
 
